--- a/public/css/style.css
+++ b/public/css/style.css
@@ -635,6 +635,10 @@ label {
   border-bottom: 2px solid #608dfd;
 }
 
+#carousel {
+  padding: 150px 0;
+}
+
 @media (max-width: 768px) {
   #about img {
     margin: 50px 0;
