--- a/public/css/style.css
+++ b/public/css/style.css
@@ -636,7 +636,11 @@ label {
 }
 
 #carousel {
-  padding: 150px 0;
+  padding: 100px 0;
+}
+#carousel .carousel-inner{
+  width: 45%;
+  margin: auto;
 }
 
 @media (max-width: 768px) {
