--- a/public/css/style.css
+++ b/public/css/style.css
@@ -636,11 +636,16 @@ label {
 }
 
 #carousel {
-  padding: 100px 0;
+  padding: 50px 0;
 }
 #carousel .carousel-inner{
   width: 45%;
   margin: auto;
+}
+
+#listproduct .card{
+  color: #1e7a46;
+  background: #000;
 }
 
 @media (max-width: 768px) {
@@ -648,3 +653,4 @@ label {
     margin: 50px 0;
   }
 }
+
